--- a/dev/css/Member_style.css
+++ b/dev/css/Member_style.css
@@ -957,7 +957,7 @@ footer.footer .footer_info .epaper-footer_link .epaper .etitle {
 }
 
 footer.footer .footer_info .epaper-footer_link .epaper .einput {
-  margin: 15px 0;
+  margin: 15px auto;
   display: flex;
   height: 30px;
   width: 100%;
@@ -1002,7 +1002,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   color: #fff;
 }
 
-@media (max-width: 1439px) {
+@media screen and (min-width: 1440px) {
   footer.footer .footer_logo_block {
     width: 45%;
     padding-left: 5%;
@@ -1012,7 +1012,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 1200px) {
+@media screen and (min-width: 1200px) and (max-width: 1439px) {
   footer.footer .footer_logo_block {
     width: 35%;
     padding-left: 4%;
@@ -1022,7 +1022,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 992px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
   footer.footer .footer_logo_block {
     width: 30%;
     padding-left: 3%;
@@ -1032,7 +1032,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   footer.footer {
     display: flex;
     flex-direction: column;
@@ -1071,14 +1071,14 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 575px) {
+@media screen and (min-width: 576px) and (max-width: 767px) {
   footer.footer {
     height: auto;
+    padding: 15px 0;
   }
   footer.footer .footer_info {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    width: 100%;
   }
   footer.footer .footer_info .sevrves_place-serves_tel {
     height: 110px;
@@ -1089,11 +1089,21 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   footer.footer .footer_info .epaper-footer_link {
     height: auto;
     width: 100%;
-    margin: auto 20px;
+    margin: auto;
     text-align: center;
+  }
+  footer.footer .footer_info .epaper-footer_link .epaper {
+    width: 100%;
+  }
+  footer.footer .footer_info .epaper-footer_link .epaper .etitle {
+    margin: 15px 0 5px;
+  }
+  footer.footer .footer_info .epaper-footer_link .epaper .einput {
+    width: 60%;
   }
   footer.footer .footer_info .epaper-footer_link .link {
     display: flex;
+    justify-content: center;
   }
   footer.footer .footer_info .epaper-footer_link .link .linkup div {
     margin: 2px;
@@ -1102,6 +1112,15 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   footer.footer .footer_info .epaper-footer_link .link .linkdown div {
     margin: 2px;
     padding-right: 4px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  footer.footer .footer_info {
+    width: 100%;
+  }
+  footer.footer .epaper-footer_link .epaper .einput {
+    width: 80% !important;
   }
 }
 /*# sourceMappingURL=Member_style.css.map */
