--- a/dev/css/footer.css
+++ b/dev/css/footer.css
@@ -102,7 +102,7 @@ footer.footer .footer_info .epaper-footer_link .epaper .etitle {
 }
 
 footer.footer .footer_info .epaper-footer_link .epaper .einput {
-  margin: 15px 0;
+  margin: 15px auto;
   display: flex;
   height: 30px;
   width: 100%;
@@ -147,7 +147,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   color: #fff;
 }
 
-@media (max-width: 1439px) {
+@media screen and (min-width: 1440px) {
   footer.footer .footer_logo_block {
     width: 45%;
     padding-left: 5%;
@@ -157,7 +157,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 1200px) {
+@media screen and (min-width: 1200px) and (max-width: 1439px) {
   footer.footer .footer_logo_block {
     width: 35%;
     padding-left: 4%;
@@ -167,7 +167,7 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 992px) {
+@media screen and (min-width: 992px) and (max-width: 1199px) {
   footer.footer .footer_logo_block {
     width: 30%;
     padding-left: 3%;
@@ -177,9 +177,8 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   footer.footer {
-    display: flex;
     flex-direction: column;
     width: 100%;
     height: auto;
@@ -190,23 +189,16 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
     padding-left: 0;
     margin: 10px auto 0;
   }
-  footer.footer .footer_logo_block .copyright {
-    width: 225px;
-  }
   footer.footer .footer_info {
     width: auto;
     height: auto;
-    margin: 20px 0 0;
-    padding: 0;
-    display: flex;
     justify-content: center;
+    margin: 10px 0 0;
   }
   footer.footer .footer_info .sevrves_place-serves_tel {
-    height: 150px;
     margin: auto 20px;
   }
   footer.footer .footer_info .serves_time-serves_email {
-    height: 150px;
     margin: auto 20px;
   }
   footer.footer .footer_info .epaper-footer_link {
@@ -216,29 +208,78 @@ footer.footer .footer_info .epaper-footer_link .link a:visited {
   }
 }
 
-@media (max-width: 575px) {
+@media screen and (min-width: 576px) and (max-width: 767px) {
   footer.footer {
+    flex-direction: column;
     height: auto;
+    padding: 15px 0;
+  }
+  footer.footer .footer_logo_block {
+    width: 100%;
+    text-align: center;
+    padding: 0;
   }
   footer.footer .footer_info {
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  footer.footer .footer_info .sevrves_place-serves_tel {
-    height: 110px;
-  }
-  footer.footer .footer_info .serves_time-serves_email {
-    height: 110px;
+    width: 100%;
+    margin: 10px auto 0;
   }
   footer.footer .footer_info .epaper-footer_link {
     height: auto;
     width: 100%;
-    margin: auto 20px;
     text-align: center;
+    margin: auto;
+  }
+  footer.footer .footer_info .epaper-footer_link .epaper {
+    width: 100%;
+  }
+  footer.footer .footer_info .epaper-footer_link .epaper .einput {
+    width: 60%;
   }
   footer.footer .footer_info .epaper-footer_link .link {
     display: flex;
+    justify-content: center;
+  }
+  footer.footer .footer_info .epaper-footer_link .link .linkup div {
+    margin: 5px;
+    padding-right: 10px;
+  }
+  footer.footer .footer_info .epaper-footer_link .link .linkdown div {
+    margin: 5px;
+    padding-right: 10px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  footer.footer {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+    padding: 15px 0;
+  }
+  footer.footer .footer_logo_block {
+    width: 100%;
+    padding: 0;
+    text-align: center;
+  }
+  footer.footer .footer_info {
+    width: 100%;
+    margin: 10px auto 0;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  footer.footer .footer_info .epaper-footer_link {
+    margin: 0;
+    text-align: center;
+    width: 100%;
+  }
+  footer.footer .footer_info .epaper-footer_link .epaper .einput {
+    width: 60%;
+  }
+  footer.footer .footer_info .epaper-footer_link .link {
+    display: flex;
+    justify-content: center;
   }
   footer.footer .footer_info .epaper-footer_link .link .linkup div {
     margin: 2px;
