--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -83,7 +83,7 @@ footer.footer{
                     margin: 5px 0;
                 }
                 .einput{
-                    margin: 15px 0;
+                    margin: 15px auto;
                     display: flex;
                     height: 30px;
                     width: 100%;
@@ -128,19 +128,23 @@ footer.footer{
 }
 
 // media
-@media (max-width: 1439px){
+@media screen and (min-width: 1440px) {
+    // 請用1366
     footer.footer{
-        .footer_logo_block{
-            width: 45%;
-            padding-left: 5%;
-        }
-        .footer_info{
-            width: 55%;
+        // max-width: 1366px;
+            .footer_logo_block{
+                width: 45%;
+                padding-left: 5%;
+            }
+            .footer_info{
+                width: 55%;
+            }
         }
     }
-}
-@media (max-width: 1200px){
+@media screen and (min-width: 1200px) and (max-width: 1439px){
+    // 請用1152
     footer.footer{
+        // max-width: 1152px;
         .footer_logo_block{
             width: 35%;
             padding-left: 4%;
@@ -150,8 +154,10 @@ footer.footer{
         }
     }
 }
-@media (max-width: 992px){
+@media screen and (min-width: 992px) and (max-width: 1199px){
+    // 請用960
     footer.footer{
+        // max-width: 960px;
         .footer_logo_block{
             width: 30%;
             padding-left: 3%;
@@ -161,9 +167,11 @@ footer.footer{
         }
     }
 }
-@media (max-width: 768px){
+@media screen and (min-width: 768px) and (max-width: 991px){
+    // 請用720
     footer.footer{
-        display: flex;
+        // max-width: 720px;
+        // display: flex;
         flex-direction: column;
         width: 100%;
         height: auto;
@@ -172,23 +180,18 @@ footer.footer{
             width: auto;
             padding-left: 0;
             margin: 10px auto 0;
-            .copyright{
-                width: 225px;
-            }
         }
         .footer_info{
             width: auto;
             height: auto;
-            margin: 20px 0 0;
-            padding: 0;
-            display: flex;
             justify-content: center;
+            margin: 10px 0 0;
             .sevrves_place-serves_tel{
-                height: 150px;
+                // height: 150px;
                 margin: auto 20px;
             }
             .serves_time-serves_email{
-                height: 150px;
+                // height: 150px;
                 margin: auto 20px;
             }
             .epaper-footer_link{
@@ -199,26 +202,93 @@ footer.footer{
         }
     }
 }
-@media (max-width: 575px){
+@media screen and (min-width: 576px) and (max-width: 767px){
+  // 請用540
     footer.footer{
+        // max-width: 540px;
+        flex-direction: column;
         height: auto;
+        padding: 15px 0;
+        .footer_logo_block{
+            width: 100%;
+            text-align: center;
+            padding: 0;
+        }
         .footer_info{
-            display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            .sevrves_place-serves_tel{
-                height: 110px;
-            }
-            .serves_time-serves_email{
-                height: 110px; 
-            }
+            width: 100%;
+            margin: 10px auto 0;
+            // justify-content: center;
+            // .sevrves_place-serves_tel{
+            //     // height: 110px;
+            // }
+            // .serves_time-serves_email{
+            //     // height: 110px; 
+            // }
             .epaper-footer_link{
                 height: auto;
                 width: 100%;
-                margin: auto 20px;
                 text-align: center;
+                margin: auto;
+                .epaper{
+                    width: 100%;
+                    // .etitle{
+                    //     margin: 15px 0 5px;
+                    // }
+                    .einput{
+                        width: 60%;
+                    }
+                }
                 .link{
                     display: flex;
+                    justify-content: center;
+                    .linkup{
+                        div{
+                            margin: 5px;
+                            padding-right: 10px;
+                        }
+                    }
+                    .linkdown{
+                        div{
+                            margin: 5px;
+                            padding-right: 10px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 575px){
+    // 請用100%
+    footer.footer{
+        max-width: 100%;
+        display: block;
+        margin: auto;
+        padding: 15px 0;
+        .footer_logo_block{
+            width: 100%;
+            padding: 0;
+            text-align: center;
+        }
+        .footer_info{
+            width: 100%;
+            margin: 10px auto 0;
+            flex-wrap: wrap;
+            justify-content: center;
+            .epaper-footer_link{
+                margin: 0;
+                text-align: center;
+                width: 100%;
+                .epaper{
+                    .einput{
+                        width: 60%;
+                    }
+                }
+                .link{
+                    display: flex;
+                    justify-content: center;
                     .linkup{
                         div{
                             margin: 2px;
@@ -235,4 +305,5 @@ footer.footer{
             }
         }
     }
-}
+ }
+
