--- a/dev/css/headerIndex.css
+++ b/dev/css/headerIndex.css
@@ -902,7 +902,7 @@ button.btnB_XL_blue p {
 }
 
 button.btnB_XL_blue div.bg {
-  z-index: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
@@ -963,7 +963,7 @@ button.btnB_XL_yellow p {
 }
 
 button.btnB_XL_yellow div.bg {
-  z-index: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
@@ -1024,7 +1024,7 @@ button.btnB_L_blue p {
 }
 
 button.btnB_L_blue div.bg {
-  z-index: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
@@ -1085,7 +1085,7 @@ button.btnB_L_yellow p {
 }
 
 button.btnB_L_yellow div.bg {
-  z-index: 0;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
@@ -2506,25 +2506,26 @@ header #headerbox nav.menu ul li p {
   color: #2C5E9E;
 }
 
-header #headerbox nav.menu ul.logo {
-  top: 340px;
-  left: 32vw;
-}
-
-header #headerbox nav.menu ul.logo li a img {
-  width: 230px;
-}
-
 header #headerbox nav.menu ul.llleft {
   top: 200px;
-  left: calc(50vw);
   width: 180px;
 }
 
 header #headerbox nav.menu ul.llleft li a p {
-  font-size: 50px !important;
   margin-bottom: 15px;
   z-index: 2;
+}
+
+@media screen and (min-width: 575px) {
+  header #headerbox nav.menu ul.llleft li a p {
+    font-size: 50px !important;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  header #headerbox nav.menu ul.llleft li a p {
+    font-size: 30px !important;
+  }
 }
 
 header #headerbox nav.menu ul.llleft :nth-child(1) {
@@ -2544,55 +2545,70 @@ header #headerbox nav.menu ul.llleft :nth-child(3) {
 
 header #headerbox nav.menu ul.ybg {
   position: absolute;
-  left: 52vw;
   top: 300px;
 }
 
 header #headerbox nav.menu ul.ybg div {
   opacity: 0;
   z-index: 1;
-  width: 220px;
-  height: 70px;
   background-color: #FFC400;
   -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
-header #headerbox nav.menu ul.ybg :nth-child(1) {
-  -webkit-transform: skew(8deg) translate(-35px, -46px);
-          transform: skew(8deg) translate(-35px, -46px);
+@media screen and (min-width: 575px) {
+  header #headerbox nav.menu ul.ybg div {
+    width: 220px;
+    height: 70px;
+  }
 }
 
-header #headerbox nav.menu ul.ybg :nth-child(2) {
-  -webkit-transform: skew(8deg) translate(-5px, -21px);
-          transform: skew(8deg) translate(-5px, -21px);
-}
-
-header #headerbox nav.menu ul.ybg :nth-child(3) {
-  -webkit-transform: skew(8deg) translate(25px, 4px);
-          transform: skew(8deg) translate(25px, 4px);
+@media screen and (max-width: 575px) {
+  header #headerbox nav.menu ul.ybg div {
+    width: 120px;
+    height: 40px;
+  }
 }
 
 header #headerbox nav.menu ul.llmiddle {
   top: 519px;
-  left: 58vw;
   width: 180px;
 }
 
 header #headerbox nav.menu ul.llmiddle li a.member svg {
   position: absolute;
-  -webkit-transform: scale(3);
-          transform: scale(3);
 }
 
-header #headerbox nav.menu ul.llmiddle li a.cart {
-  left: 90px;
+@media screen and (min-width: 575px) {
+  header #headerbox nav.menu ul.llmiddle li a.member svg {
+    -webkit-transform: scale(3);
+            transform: scale(3);
+  }
+}
+
+@media screen and (max-width: 575px) {
+  header #headerbox nav.menu ul.llmiddle li a.member svg {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+  }
 }
 
 header #headerbox nav.menu ul.llmiddle li a.cart svg {
   position: absolute;
-  -webkit-transform: scale(3);
-          transform: scale(3);
+}
+
+@media screen and (min-width: 575px) {
+  header #headerbox nav.menu ul.llmiddle li a.cart svg {
+    -webkit-transform: scale(3);
+            transform: scale(3);
+  }
+}
+
+@media screen and (max-width: 575px) {
+  header #headerbox nav.menu ul.llmiddle li a.cart svg {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+  }
 }
 
 header #headerbox nav.menu ul.llmiddle li a path {
@@ -2601,7 +2617,6 @@ header #headerbox nav.menu ul.llmiddle li a path {
 
 header #headerbox nav.menu ul.llright {
   top: 200px;
-  left: 74vw;
   width: 310px;
 }
 
@@ -2694,7 +2709,6 @@ header #headerbox div#hamburgerBG {
   width: 80%;
   min-width: 1152px;
   height: 100vh;
-  right: 0;
   top: 0;
   overflow: hidden !important;
   -webkit-transition: 0.3s all;
@@ -2751,7 +2765,7 @@ header #headerbox div#hamburgerBG div.yellow3 {
 }
 
 header #headerbox div#hamburgerBG div.blue {
-  z-index: 25;
+  z-index: 35;
   opacity: 1;
   top: calc(100vh - 50px);
   left: calc(29vh - 152px);
@@ -2765,8 +2779,6 @@ header #headerbox div#hamburgerBG div.blue {
 header #headerbox div#hamburgerBG div.blue p {
   text-align: center;
   color: white;
-  -webkit-transform: skew(-16deg) translate(-135px, 10px);
-          transform: skew(-16deg) translate(-135px, 10px);
 }
 
 header #headerbox div#hamburgerBG.on {
@@ -2777,7 +2789,469 @@ header #headerbox div#hamburgerBG.show {
   opacity: 1;
 }
 
-header li:hover a svg path {
+header #headerbox li:hover a svg path {
   color: #FFC400 !important;
+}
+
+header #headerbox li:hover a svg path {
+  color: #FFC400 !important;
+}
+
+@media screen and (min-width: 1440px) {
+  header nav.menu ul.logo {
+    top: 340px;
+    left: 32vw;
+  }
+  header nav.menu ul.logo li a img {
+    width: 230px;
+  }
+  header nav.menu ul.llleft {
+    left: calc(50vw);
+  }
+  header nav.menu ul.ybg {
+    left: 52vw;
+  }
+  header nav.menu ul.ybg :nth-child(1) {
+    -webkit-transform: skew(8deg) translate(-35px, -46px);
+            transform: skew(8deg) translate(-35px, -46px);
+  }
+  header nav.menu ul.ybg :nth-child(2) {
+    -webkit-transform: skew(8deg) translate(-5px, -21px);
+            transform: skew(8deg) translate(-5px, -21px);
+  }
+  header nav.menu ul.ybg :nth-child(3) {
+    -webkit-transform: skew(8deg) translate(25px, 4px);
+            transform: skew(8deg) translate(25px, 4px);
+  }
+  header nav.menu ul.llmiddle {
+    left: 58vw;
+  }
+  header nav.menu ul.llmiddle li a.cart {
+    left: 90px;
+  }
+  header nav.menu ul.llright {
+    left: 74vw;
+  }
+  header div#hamburgerBG {
+    right: 0;
+  }
+  header div#hamburgerBG div.blue p {
+    -webkit-transform: skew(-16deg) translate(-135px, 10px);
+            transform: skew(-16deg) translate(-135px, 10px);
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1439px) {
+  header nav.menu ul.logo {
+    top: 80px;
+    left: calc(81vw - 440px);
+  }
+  header nav.menu ul.logo li a img {
+    width: 230px;
+  }
+  header nav.menu ul.llleft {
+    left: calc(78vw - 440px);
+  }
+  header nav.menu ul.ybg {
+    left: calc(80vw - 440px);
+  }
+  header nav.menu ul.ybg :nth-child(1) {
+    -webkit-transform: skew(8deg) translate(-35px, -46px);
+            transform: skew(8deg) translate(-35px, -46px);
+  }
+  header nav.menu ul.ybg :nth-child(2) {
+    -webkit-transform: skew(8deg) translate(-11px, -21px);
+            transform: skew(8deg) translate(-11px, -21px);
+  }
+  header nav.menu ul.ybg :nth-child(3) {
+    -webkit-transform: skew(8deg) translate(13px, 4px);
+            transform: skew(8deg) translate(13px, 4px);
+  }
+  header nav.menu ul.llmiddle {
+    left: calc(78vw - 340px);
+  }
+  header nav.menu ul.llmiddle li a.cart {
+    left: 90px;
+  }
+  header nav.menu ul.llright {
+    left: 69vw;
+  }
+  header div#hamburgerBG {
+    right: -240px;
+  }
+  header div#hamburgerBG div.blue p {
+    -webkit-transform: skew(-16deg) translate(-235px, 10px);
+            transform: skew(-16deg) translate(-235px, 10px);
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  header nav.menu ul.logo {
+    top: 30px;
+    left: calc(53%) !important;
+  }
+  header nav.menu ul.logo li a img {
+    width: 230px;
+  }
+  header nav.menu ul.llleft {
+    top: 150px !important;
+    left: calc(29vw);
+  }
+  header nav.menu ul.llleft li a p {
+    font-size: 20px !important;
+    margin-bottom: 15px;
+  }
+  header nav.menu ul.llleft :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(3) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.ybg {
+    top: 250px !important;
+    left: calc(27vw);
+  }
+  header nav.menu ul.ybg :nth-child(1) {
+    -webkit-transform: skew(8deg) translate(0px, -46px);
+            transform: skew(8deg) translate(0px, -46px);
+  }
+  header nav.menu ul.ybg :nth-child(2) {
+    -webkit-transform: skew(8deg) translate(0px, -21px);
+            transform: skew(8deg) translate(0px, -21px);
+  }
+  header nav.menu ul.ybg :nth-child(3) {
+    -webkit-transform: skew(8deg) translate(0px, 4px);
+            transform: skew(8deg) translate(0px, 4px);
+  }
+  header nav.menu ul.llmiddle {
+    top: 470px !important;
+    left: calc(31vw);
+  }
+  header nav.menu ul.llmiddle li a.cart {
+    left: 90px;
+  }
+  header nav.menu ul.llright {
+    top: 155px !important;
+    left: 55vw !important;
+  }
+  header nav.menu ul.llright :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(3) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(4) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(5) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header div#hamburgerBG {
+    width: 100% !important;
+    right: 0px !important;
+  }
+  header div#hamburgerBG div.white {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+  }
+  header div#hamburgerBG div.blue {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+    left: 0 !important;
+  }
+  header div#hamburgerBG div.blue p {
+    -webkit-transform: skew(0deg) translate(0px, 10px) !important;
+            transform: skew(0deg) translate(0px, 10px) !important;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  header nav.menu ul.logo {
+    top: -20px;
+    left: calc(65vw - 270px) !important;
+  }
+  header nav.menu ul.logo li a img {
+    width: 230px;
+  }
+  header nav.menu ul.llleft {
+    top: 100px !important;
+    left: calc(23vw);
+  }
+  header nav.menu ul.llleft :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(3) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.ybg {
+    top: 200px !important;
+    left: calc(21vw);
+  }
+  header nav.menu ul.ybg :nth-child(1) {
+    -webkit-transform: skew(8deg) translate(0px, -46px);
+            transform: skew(8deg) translate(0px, -46px);
+  }
+  header nav.menu ul.ybg :nth-child(2) {
+    -webkit-transform: skew(8deg) translate(0px, -21px);
+            transform: skew(8deg) translate(0px, -21px);
+  }
+  header nav.menu ul.ybg :nth-child(3) {
+    -webkit-transform: skew(8deg) translate(0px, 4px);
+            transform: skew(8deg) translate(0px, 4px);
+  }
+  header nav.menu ul.llmiddle {
+    top: 420px !important;
+    left: calc(25vw);
+  }
+  header nav.menu ul.llmiddle li a.cart {
+    left: 90px;
+  }
+  header nav.menu ul.llright {
+    top: 105px !important;
+    left: 49vw !important;
+  }
+  header nav.menu ul.llright :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(3) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(4) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(5) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header div#hamburgerBG {
+    width: 100% !important;
+    right: 0px !important;
+  }
+  header div#hamburgerBG div.white {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+  }
+  header div#hamburgerBG div.blue {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+    left: 0 !important;
+  }
+  header div#hamburgerBG div.blue p {
+    -webkit-transform: skew(0deg) translate(calc(-57vw + 650px), 10px) !important;
+            transform: skew(0deg) translate(calc(-57vw + 650px), 10px) !important;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px) {
+  header nav.menu ul.logo {
+    top: -20px;
+    left: calc(18vw + 90px) !important;
+  }
+  header nav.menu ul.logo li a img {
+    width: 230px;
+  }
+  header nav.menu ul.llleft {
+    top: 100px !important;
+    left: calc(23vw);
+  }
+  header nav.menu ul.llleft :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(3) {
+    -webkit-transform: translateX(170px) translateY(-192px) !important;
+            transform: translateX(170px) translateY(-192px) !important;
+  }
+  header nav.menu ul.ybg {
+    top: 200px !important;
+    left: calc(21vw);
+  }
+  header nav.menu ul.ybg :nth-child(1) {
+    -webkit-transform: skew(8deg) translate(0px, -46px);
+            transform: skew(8deg) translate(0px, -46px);
+  }
+  header nav.menu ul.ybg :nth-child(2) {
+    -webkit-transform: skew(8deg) translate(0px, -21px);
+            transform: skew(8deg) translate(0px, -21px);
+  }
+  header nav.menu ul.ybg :nth-child(3) {
+    -webkit-transform: skew(8deg) translate(178px, -188px) !important;
+            transform: skew(8deg) translate(178px, -188px) !important;
+  }
+  header nav.menu ul.llmiddle {
+    top: 228px !important;
+    left: calc(18vw + 230px);
+  }
+  header nav.menu ul.llmiddle li a.cart {
+    left: 90px;
+  }
+  header nav.menu ul.llright {
+    top: 305px !important;
+    left: 28vw !important;
+    text-align: center;
+  }
+  header nav.menu ul.llright :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(3) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(4) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(5) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header div#hamburgerBG {
+    width: 100% !important;
+    right: 0px !important;
+  }
+  header div#hamburgerBG div.white {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+  }
+  header div#hamburgerBG div.blue {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+    left: 0 !important;
+  }
+  header div#hamburgerBG div.blue p {
+    -webkit-transform: skew(0deg) translate(calc(-61vw + 660px), 10px) !important;
+            transform: skew(0deg) translate(calc(-61vw + 660px), 10px) !important;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  header nav.menu ul.logo {
+    top: -20px;
+    left: calc(15vw + 40px) !important;
+  }
+  header nav.menu ul.logo li a img {
+    width: 230px;
+  }
+  header nav.menu ul.llleft {
+    top: 100px !important;
+    left: calc(22vw);
+  }
+  header nav.menu ul.llleft :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llleft :nth-child(3) {
+    -webkit-transform: translateX(150px) translateY(-128px) !important;
+            transform: translateX(150px) translateY(-128px) !important;
+  }
+  header nav.menu ul.ybg {
+    top: 200px !important;
+    left: calc(21vw);
+  }
+  header nav.menu ul.ybg :nth-child(1) {
+    -webkit-transform: skew(8deg) translate(0px, -46px);
+            transform: skew(8deg) translate(0px, -46px);
+  }
+  header nav.menu ul.ybg :nth-child(2) {
+    -webkit-transform: skew(8deg) translate(0px, -21px);
+            transform: skew(8deg) translate(0px, -21px);
+  }
+  header nav.menu ul.ybg :nth-child(3) {
+    -webkit-transform: skew(8deg) translate(178px, -188px) !important;
+            transform: skew(8deg) translate(178px, -188px) !important;
+  }
+  header nav.menu ul.llmiddle {
+    top: 178px !important;
+    left: calc(17vw + 180px);
+  }
+  header nav.menu ul.llmiddle li a.cart {
+    left: 70px;
+  }
+  header nav.menu ul.llright {
+    top: 225px !important;
+    left: calc(18vw - 30px) !important;
+    text-align: center;
+  }
+  header nav.menu ul.llright li {
+    margin-bottom: -20px;
+  }
+  header nav.menu ul.llright :nth-child(1) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(2) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(3) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(4) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header nav.menu ul.llright :nth-child(5) {
+    -webkit-transform: translateX(0px) !important;
+            transform: translateX(0px) !important;
+  }
+  header div#hamburgerBG {
+    width: 100% !important;
+    right: 0px !important;
+  }
+  header div#hamburgerBG div.white {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+  }
+  header div#hamburgerBG div.blue {
+    -webkit-transform: skew(0deg) translateX(0px) !important;
+            transform: skew(0deg) translateX(0px) !important;
+    left: 0 !important;
+  }
+  header div#hamburgerBG div.blue p {
+    -webkit-transform: skew(0deg) translate(calc(-68vw + 660px), 15px) !important;
+            transform: skew(0deg) translate(calc(-68vw + 660px), 15px) !important;
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=headerIndex.css.map */
