--- a/dev/sass/headerIndex.scss
+++ b/dev/sass/headerIndex.scss
@@ -29,22 +29,19 @@ header {
                     }
                 }
             }
-            & ul.logo {
-                top: 340px;
-                left: 32vw;
-                & li a img {
-                        // position: absolute;
-                        width: 230px;
-                    }
-            }
             & ul.llleft {
                 top: 200px;
-                left: calc(50vw);
                 width: 180px;
                 & li a p{
-                    font-size: 50px !important;
+                    // font-size: 50px !important;
                     margin-bottom: 15px;
                     z-index: 2;
+                    @media screen and (min-width: 575px){
+                        font-size: 50px !important;
+                    }
+                    @media screen and (max-width: 575px){
+                        font-size: 30px !important;
+                    }
                 }
                 & :nth-child(1){
                     transform: translateX(-30px);
@@ -60,47 +57,50 @@ header {
 
             & ul.ybg {
                 position: absolute;
-                left: 52vw;
                 top: 300px;
                 & div{
-                        // position: absolute;
-                        opacity: 0;
-                        z-index: 1;
-                        // transform: translate(-30px , -50px);
+                    // position: absolute;
+                    opacity: 0;
+                    z-index: 1;
+                    // transform: translate(-30px , -50px);
+                    background-color: $mt_yellow;
+                    transition: 0.2s all ease-in-out;
+
+                    @media screen and (min-width: 575px){
                         width: 220px;
                         height: 70px;
-                        background-color: $mt_yellow;
-                        transition: 0.2s all ease-in-out;
                     }
-
-                    & :nth-child(1){
-                        transform: skew(8deg) translate(-35px,-46px);
+                    @media screen and (max-width: 575px){
+                        width: 120px;
+                        height: 40px;
                     }
-                    & :nth-child(2){
-                        transform: skew(8deg) translate(-5px,-21px);
-                    }
-                    & :nth-child(3){
-                        transform: skew(8deg) translate(25px,4px);
-                    }
+                }
             }
             & ul.llmiddle {
                 top: 519px;
-                left: 58vw;
                 width: 180px;
                 & li a.member{
                     // left: 50px;
                     // top: 170px;
                     & svg {
                         position: absolute;
-                        transform: scale(3);
+                        @media screen and (min-width: 575px){
+                            transform: scale(3);
+                        }
+                        @media screen and (max-width: 575px){
+                            transform: scale(2);
+                        }
                     }
                 }
                 & li a.cart{
-                    left: 90px;
-                    // top: 325px;
                     & svg {
                         position: absolute;
-                        transform: scale(3);
+                        @media screen and (min-width: 575px){
+                            transform: scale(3);
+                        }
+                        @media screen and (max-width: 575px){
+                            transform: scale(2);
+                        }
                     }
                 }
                 & li a path{
@@ -109,7 +109,6 @@ header {
             }
             & ul.llright {
                 top: 200px;
-                left: 74vw;
                 width: 310px;
                 & li{
                     display: inline-block;
@@ -181,7 +180,6 @@ header {
             width: 80%;
             min-width: 1152px;
             height: 100vh;
-            right: 0;
             top: 0;
             overflow: hidden !important;
             transition: 0.3s all ;
@@ -226,7 +224,7 @@ header {
                 transform: skew(16deg) translateX(150px);
             }
             & div.blue{
-                z-index: 25;
+                z-index: 35;
                 opacity: 1;
                 top: calc(100vh - 50px);
                 left: calc(29vh - 152px);
@@ -237,7 +235,6 @@ header {
                 & p{
                     text-align: center;
                     color: white;
-                    transform: skew(-16deg) translate(-135px,10px);
                 }
             }
             &.on {
@@ -247,6 +244,15 @@ header {
                 opacity: 1;
             }
         }
+
+
+    li{
+        &:hover a{
+            & svg path {
+                color: $mt_yellow !important ;
+            }
+        }
+    
     }
 
 
@@ -258,5 +264,426 @@ header {
         }
     
     }
+
+    
+    }
+
+
+
+
+
+@media screen and (min-width: 1440px) {
+    & nav.menu{
+        & ul.logo {
+            top: 340px;
+            left: 32vw;
+            & li a img {
+                    width: 230px;
+                }
+        }
+    & ul.llleft {
+        left: calc(50vw);
+    }
+    & ul.ybg {
+        left: 52vw;
+        & :nth-child(1){
+            transform: skew(8deg) translate(-35px,-46px);
+        }
+        & :nth-child(2){
+            transform: skew(8deg) translate(-5px,-21px);
+        }
+        & :nth-child(3){
+            transform: skew(8deg) translate(25px,4px);
+        }
+    }
+    & ul.llmiddle {
+        left: 58vw;
+        & li a.cart{
+            left: 90px;
+        }
+    }
+    & ul.llright {
+        left: 74vw;
+    }
+    }
+    div#hamburgerBG{
+        right: 0;
+        & div.blue{
+            & p{
+                transform: skew(-16deg) translate(-135px,10px);
+            }
+        }
+    }
+      }
+@media screen and (min-width: 1200px) and (max-width: 1439px){
+    & nav.menu{
+        & ul.logo {
+            top: 80px;
+            left: calc(81vw - 440px);
+            & li a img {
+                    width: 230px;
+                }
+        }
+        & ul.llleft {
+            left: calc(78vw - 440px);
+        }
+        & ul.ybg {
+            left: calc(80vw - 440px);
+            & :nth-child(1){
+                transform: skew(8deg) translate(-35px,-46px);
+            }
+            & :nth-child(2){
+                transform: skew(8deg) translate(-11px,-21px);
+            }
+            & :nth-child(3){
+                transform: skew(8deg) translate(13px,4px);
+            }
+        }
+        & ul.llmiddle {
+            left: calc(78vw - 340px);
+            & li a.cart{
+                left: 90px;
+            }
+        }
+        & ul.llright {
+            left: 69vw;
+        }
+    }
+    div#hamburgerBG{
+        right: -240px;
+        & div.blue{
+            & p{
+                transform: skew(-16deg) translate(-235px,10px);
+            }
+        }
+    }
+      }
+@media screen and (min-width: 992px) and (max-width: 1199px){
+    & nav.menu{
+        & ul.logo {
+            top: 30px;
+            left: calc(53%) !important;
+            & li a img {
+                    width: 230px;
+                }
+        }
+        & ul.llleft {
+            top: 150px !important;
+            left: calc(29vw);
+            & li a p{
+                font-size: 20px !important;
+                margin-bottom: 15px;
+            }
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(0px) !important;
+            }
+        }
+        & ul.ybg {
+            top: 250px !important;
+            left: calc(27vw);
+            & :nth-child(1){
+                transform: skew(8deg) translate(0px,-46px);
+            }
+            & :nth-child(2){
+                transform: skew(8deg) translate(0px,-21px);
+            }
+            & :nth-child(3){
+                transform: skew(8deg) translate(0px,4px);
+            }
+        }
+        & ul.llmiddle {
+            top: 470px !important;
+            left: calc(31vw);
+            & li a.cart{
+                left: 90px;
+            }
+        }
+        & ul.llright {
+            top: 155px !important;
+            left: 55vw !important;
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(4){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(5){
+                transform: translateX(0px) !important;
+            }
+        }
+    }
+    div#hamburgerBG{
+        width: 100% !important;
+        right: 0px !important;
+
+        & div.white{
+            transform: skew(0deg) translateX(0px) !important;
+        }
+        & div.blue{
+            transform: skew(0deg) translateX(0px) !important;
+            left: 0 !important;
+            & p{
+                transform: skew(0deg) translate(0px,10px) !important;
+            }
+        }
+    }
+      }
+@media screen and (min-width: 768px) and (max-width: 991px){
+    & nav.menu{
+        & ul.logo {
+            top: -20px;
+            left: calc(65vw - 270px) !important;
+            & li a img {
+                    width: 230px;
+                }
+        }
+        & ul.llleft {
+            top: 100px !important;
+            left: calc(23vw);
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(0px) !important;
+            }
+        }
+        & ul.ybg {
+            top: 200px !important;
+            left: calc(21vw);
+            & :nth-child(1){
+                transform: skew(8deg) translate(0px,-46px);
+            }
+            & :nth-child(2){
+                transform: skew(8deg) translate(0px,-21px);
+            }
+            & :nth-child(3){
+                transform: skew(8deg) translate(0px,4px);
+            }
+        }
+        & ul.llmiddle {
+            top: 420px !important;
+            left: calc(25vw);
+            & li a.cart{
+                left: 90px;
+            }
+        }
+        & ul.llright {
+            top: 105px !important;
+            left: 49vw !important;
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(4){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(5){
+                transform: translateX(0px) !important;
+            }
+        }
+    }
+    div#hamburgerBG{
+        width: 100% !important;
+        right: 0px !important;
+
+        & div.white{
+            transform: skew(0deg) translateX(0px) !important;
+        }
+        & div.blue{
+            transform: skew(0deg) translateX(0px) !important;
+            left: 0 !important;
+            & p{
+                transform: skew(0deg) translate( calc(-57vw + 650px) ,10px) !important;
+            }
+        }
+    }
+      }
+@media screen and (min-width: 576px) and (max-width: 767px){
+    & nav.menu{
+        & ul.logo {
+            top: -20px;
+            left: calc(18vw + 90px) !important;
+            & li a img {
+                    width: 230px;
+                }
+        }
+        & ul.llleft {
+            top: 100px !important;
+            left: calc(23vw);
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(170px) translateY(-192px) !important;
+            }
+        }
+        & ul.ybg {
+            top: 200px !important;
+            left: calc(21vw);
+            & :nth-child(1){
+                transform: skew(8deg) translate(0px,-46px);
+            }
+            & :nth-child(2){
+                transform: skew(8deg) translate(0px,-21px);
+            }
+            & :nth-child(3){
+                transform: skew(8deg) translate(178px,-188px) !important;
+            }
+        }
+        & ul.llmiddle {
+            top: 228px !important;
+            left: calc(18vw + 230px);
+            // left: 350px;
+            & li a.cart{
+                left: 90px;
+            }
+        }
+        & ul.llright {
+            top: 305px !important;
+            left: 28vw !important;
+            text-align: center;
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(4){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(5){
+                transform: translateX(0px) !important;
+            }
+        }
+    }
+    div#hamburgerBG{
+        width: 100% !important;
+        right: 0px !important;
+
+        & div.white{
+            transform: skew(0deg) translateX(0px) !important;
+        }
+        & div.blue{
+            transform: skew(0deg) translateX(0px) !important;
+            left: 0 !important;
+            & p{
+                transform: skew(0deg) translate( calc(-61vw + 660px) ,10px) !important;
+            }
+        }
+    }
+}
+@media screen and (max-width: 575px){
+    & nav.menu{
+        & ul.logo {
+            top: -20px;
+            left: calc(15vw + 40px) !important;
+            & li a img {
+                    width: 230px;
+                }
+        }
+        & ul.llleft {
+            top: 100px !important;
+            left: calc(22vw);
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(150px) translateY(-128px) !important;
+            }
+        }
+        & ul.ybg {
+            top: 200px !important;
+            left: calc(21vw);
+            & :nth-child(1){
+                transform: skew(8deg) translate(0px,-46px);
+            }
+            & :nth-child(2){
+                transform: skew(8deg) translate(0px,-21px);
+            }
+            & :nth-child(3){
+                transform: skew(8deg) translate(178px,-188px) !important;
+            }
+        }
+        & ul.llmiddle {
+            top: 178px !important;
+            left: calc(17vw + 180px);
+            // left: 350px;
+            & li a.cart{
+                left: 70px;
+            }
+        }
+        & ul.llright {
+            top: 225px !important;
+            left:  calc(18vw - 30px) !important;
+            text-align: center;
+            & li {
+                margin-bottom: -20px ;
+            }
+            & :nth-child(1){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(2){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(3){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(4){
+                transform: translateX(0px) !important;
+            }
+            & :nth-child(5){
+                transform: translateX(0px) !important;
+            }
+        }
+    }
+    div#hamburgerBG{
+        width: 100% !important;
+        right: 0px !important;
+
+        & div.white{
+            transform: skew(0deg) translateX(0px) !important;
+        }
+        & div.blue{
+            transform: skew(0deg) translateX(0px) !important;
+            left: 0 !important;
+            & p{
+                transform: skew(0deg) translate( calc(-68vw + 660px) ,15px) !important;
+                font-size: 12px;
+            }
+        }
+    }
+      }
+
+
+
 
 }
